--- a/C++/Курсовая работа - Лабиринт SFML/Лабиринт SFML/Лабиринт SFML/Лабиринт SFML.vcxproj.filters
+++ b/C++/Курсовая работа - Лабиринт SFML/Лабиринт SFML/Лабиринт SFML/Лабиринт SFML.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Source.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="graph.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
